Java 11 system test fixes